LFA/Projeto/geometrics-lfa-07-master/src/GeometricsParser.java
// Generated from Geometrics.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GeometricsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, HTMLColor=51, Number=52, 
		ID=53, NEWLINE=54, STRING=55, WS=56, COMMENT=57;
	public static final int
		RULE_program = 0, RULE_stat = 1, RULE_animStat = 2, RULE_aux = 3, RULE_assig = 4, 
		RULE_expr = 5, RULE_add = 6, RULE_remove = 7, RULE_translate = 8, RULE_rotate = 9, 
		RULE_fig = 10, RULE_anim = 11, RULE_tick = 12, RULE_loop = 13, RULE_waitms = 14, 
		RULE_shape = 15, RULE_feature = 16, RULE_point = 17, RULE_color = 18, 
		RULE_alpha = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "stat", "animStat", "aux", "assig", "expr", "add", "remove", 
			"translate", "rotate", "fig", "anim", "tick", "loop", "waitms", "shape", 
			"feature", "point", "color", "alpha"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'geometrics:'", "'main'", "'import'", "'point'", "'='", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'('", "')'", "'add'", "'to'", "'remove'", 
			"'translate'", "'rotate'", "'over'", "'figure'", "'{'", "'}'", "'animation'", 
			"'tick is'", "'loop'", "'times'", "'wait'", "'line'", "'circle'", "'rectangle'", 
			"'square'", "'ellipse'", "'color'", "'thickness'", "'filled'", "'yes'", 
			"'no'", "'hidden'", "','", "'red'", "'blue'", "'green'", "'yellow'", 
			"'black'", "'white'", "'cyan'", "'orange'", "'purple'", "'pink'", "'brown'", 
			"'grey'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "HTMLColor", "Number", "ID", "NEWLINE", "STRING", "WS", 
			"COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Geometrics.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GeometricsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(GeometricsParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(GeometricsParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(GeometricsParser.NEWLINE, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(40);
				match(NEWLINE);
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(T__0);
			setState(47);
			match(T__1);
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__12) | (1L << T__14) | (1L << T__18) | (1L << T__21) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << ID) | (1L << NEWLINE))) != 0)) {
				{
				{
				setState(48);
				stat();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public String var;
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
			this.var = ctx.var;
		}
	}
	public static class StatNewlineContext extends StatContext {
		public TerminalNode NEWLINE() { return getToken(GeometricsParser.NEWLINE, 0); }
		public StatNewlineContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStatNewline(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStatNewline(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStatNewline(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatAuxContext extends StatContext {
		public AuxContext aux() {
			return getRuleContext(AuxContext.class,0);
		}
		public StatAuxContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStatAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStatAux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStatAux(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatAddContext extends StatContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public StatAddContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStatAdd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStatAdd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStatAdd(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatAssigContext extends StatContext {
		public AssigContext assig() {
			return getRuleContext(AssigContext.class,0);
		}
		public StatAssigContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStatAssig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStatAssig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStatAssig(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StatRemoveContext extends StatContext {
		public RemoveContext remove() {
			return getRuleContext(RemoveContext.class,0);
		}
		public StatRemoveContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterStatRemove(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitStatRemove(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitStatRemove(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(61);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
			case T__18:
			case T__21:
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
			case ID:
				_localctx = new StatAssigContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				assig();
				}
				break;
			case T__12:
				_localctx = new StatAddContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				add();
				}
				break;
			case T__14:
				_localctx = new StatRemoveContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				remove();
				}
				break;
			case T__2:
				_localctx = new StatAuxContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				aux();
				}
				break;
			case NEWLINE:
				_localctx = new StatNewlineContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(60);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnimStatContext extends ParserRuleContext {
		public AnimStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_animStat; }
	 
		public AnimStatContext() { }
		public void copyFrom(AnimStatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AnimStatRotateContext extends AnimStatContext {
		public RotateContext rotate() {
			return getRuleContext(RotateContext.class,0);
		}
		public AnimStatRotateContext(AnimStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAnimStatRotate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAnimStatRotate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAnimStatRotate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AnimStatTranslateContext extends AnimStatContext {
		public TranslateContext translate() {
			return getRuleContext(TranslateContext.class,0);
		}
		public AnimStatTranslateContext(AnimStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAnimStatTranslate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAnimStatTranslate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAnimStatTranslate(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AnimStatWaitmsContext extends AnimStatContext {
		public WaitmsContext waitms() {
			return getRuleContext(WaitmsContext.class,0);
		}
		public AnimStatWaitmsContext(AnimStatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAnimStatWaitms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAnimStatWaitms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAnimStatWaitms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnimStatContext animStat() throws RecognitionException {
		AnimStatContext _localctx = new AnimStatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_animStat);
		try {
			setState(66);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				_localctx = new AnimStatTranslateContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				translate();
				}
				break;
			case T__16:
				_localctx = new AnimStatRotateContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				rotate();
				}
				break;
			case T__25:
				_localctx = new AnimStatWaitmsContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				waitms();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AuxContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(GeometricsParser.STRING, 0); }
		public TerminalNode NEWLINE() { return getToken(GeometricsParser.NEWLINE, 0); }
		public AuxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aux; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAux(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAux(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAux(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AuxContext aux() throws RecognitionException {
		AuxContext _localctx = new AuxContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_aux);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(T__2);
			setState(69);
			match(STRING);
			setState(70);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssigContext extends ParserRuleContext {
		public String var;
		public AssigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assig; }
	 
		public AssigContext() { }
		public void copyFrom(AssigContext ctx) {
			super.copyFrom(ctx);
			this.var = ctx.var;
		}
	}
	public static class AssigAnimationContext extends AssigContext {
		public AnimContext anim() {
			return getRuleContext(AnimContext.class,0);
		}
		public AssigAnimationContext(AssigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAssigAnimation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAssigAnimation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAssigAnimation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigPointContext extends AssigContext {
		public TerminalNode ID() { return getToken(GeometricsParser.ID, 0); }
		public PointContext point() {
			return getRuleContext(PointContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(GeometricsParser.NEWLINE, 0); }
		public AssigPointContext(AssigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAssigPoint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAssigPoint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAssigPoint(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigFigureContext extends AssigContext {
		public FigContext fig() {
			return getRuleContext(FigContext.class,0);
		}
		public AssigFigureContext(AssigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAssigFigure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAssigFigure(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAssigFigure(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigExprContext extends AssigContext {
		public TerminalNode ID() { return getToken(GeometricsParser.ID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(GeometricsParser.NEWLINE, 0); }
		public AssigExprContext(AssigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAssigExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAssigExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAssigExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssigShapeContext extends AssigContext {
		public ShapeContext shape() {
			return getRuleContext(ShapeContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(GeometricsParser.NEWLINE, 0); }
		public List<FeatureContext> feature() {
			return getRuleContexts(FeatureContext.class);
		}
		public FeatureContext feature(int i) {
			return getRuleContext(FeatureContext.class,i);
		}
		public AssigShapeContext(AssigContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).enterAssigShape(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GeometricsListener ) ((GeometricsListener)listener).exitAssigShape(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GeometricsVisitor ) return ((GeometricsVisitor<? extends T>)visitor).visitAssigShape(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssigContext assig() throws RecognitionException {
		AssigContext _localctx = new AssigContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assig);
		int _la;
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__26:
			case T__27:
			case T__28:
			case T__29:
			case T__30:
				_localctx = new AssigShapeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				shape();
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__36))) != 0)) {
					{
					{
					setState(73);
					feature();
					}
					}
					setState(78);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(79);
				match(NEWLINE);
				}
				break;
			case T__3:
				_localctx = new AssigPointContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				match(T__3);
				setState(82);
				match(ID);
				setState(83);
				point();
				setState(84);
				match(NEWLINE);
				}
				break;
			case T__21:
				_localctx = new AssigAnimationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				anim();
				}
				break;
			case T__18:
				_localctx = new AssigFigureContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				fig();
				}
				break;
			case ID:
				_localctx = new AssigExprContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				match(ID);
				setState(89);
				match(T__4);
				setState(90);
				expr(0);
				setState(91);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
